:children_crossing: Improve last post formatting

--- a/public/posts/en-US/simple-page-transitions-in-nextjs-with-framer-motion.mdx
+++ b/public/posts/en-US/simple-page-transitions-in-nextjs-with-framer-motion.mdx
@@ -19,6 +19,13 @@ Two things before we start:
 
 Enough of talking, let's go!
 
+## Final look
+
+<PostImage
+  src="/images/posts/simple-page-transitions-in-nextjs-with-framer-motion/final.gif"
+  alt="GIF containing final result"
+/>
+
 ## Project initialization
 
 First of all, start a Next.js project.
@@ -203,15 +210,8 @@ To test it, run:
 {`yarn dev`}
 </CodeBlock>
 
-## Final look
-
-<PostImage
-  src="/images/posts/simple-page-transitions-in-nextjs-with-framer-motion/final.gif"
-  alt="GIF containing final result"
-/>
-
 Some suggestions:
 - Change the animation type (for example, a scale animation);
-- If you pay attention to the above GIF, you'll see that the horizontal scrollbar is appearing and disappearing between the animations. Try to fix it! (Tip: <InlineCode>overflow-x</InlineCode>).
+- If you pay attention to the final result GIF, you'll see that the horizontal scrollbar is appearing and disappearing between the animations. Try to fix it! (Tip: <InlineCode>overflow-x</InlineCode>).
 
 That's it, thanks for reading!
