--- a/public/posts/pt-BR/simple-page-transitions-in-nextjs-with-framer-motion.mdx
+++ b/public/posts/pt-BR/simple-page-transitions-in-nextjs-with-framer-motion.mdx
@@ -17,6 +17,13 @@ o [Visual Studio Code](https://code.visualstudio.com/) como editor de texto e o
 
 Chega de conversa, bora lá!
 
+## Resultado final
+
+<PostImage
+  src="/images/posts/simple-page-transitions-in-nextjs-with-framer-motion/final.gif"
+  alt="GIF containing final result"
+/>
+
 ## Inicialização do projeto
 
 Antes de tudo, inicie um projeto Next.js.
@@ -198,15 +205,8 @@ Para testar, rode o comando:
 {`yarn dev`}
 </CodeBlock>
 
-## Resultado final
-
-<PostImage
-  src="/images/posts/simple-page-transitions-in-nextjs-with-framer-motion/final.gif"
-  alt="GIF containing final result"
-/>
-
 Algumas sugestões:
 - Mude o tipo da animação (por exemplo, uma animação que use a propriedade scale);
-- Se você prestar atenção no GIF acima, você irá perceber que a scrollbar horizontal está aparecendo e desaparecendo entre as animações. Tente arrumar isso! (Dica: <InlineCode>overflow-x</InlineCode>).
+- Se você prestar atenção no GIF do resultado final, você irá perceber que a scrollbar horizontal está aparecendo e desaparecendo entre as animações. Tente arrumar isso! (Dica: <InlineCode>overflow-x</InlineCode>).
 
 Isso é tudo, obrigado por ler até aqui!
